--- a/templates/event_confirmation.html
+++ b/templates/event_confirmation.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <form method="POST">
+{% csrf_token %}
 <a href="{% url 'event' event.id %}">Go back</a>
 <input type="submit" value="Confirm"/>
 </form>
