users profile can be viewed

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,9 +22,11 @@
 
 <div id='event--lists'>
 {% for user in users %}
+<a href="{% url 'profile' user.id %}">
 <div>
 {{user.name}}
 </div>
+</a>
 {% endfor %}
 </div>
 </section>
