--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,10 @@
 <nav>
 <a href="{% url 'home' %}">Home</a>
+
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'account' %}">account</a>
+    <a href="#">Logout</a>
+    {% else %}
+    <a href="#">Login</a>
+    {% endif %}
 </nav>
