project submission updated

--- a/templates/submit-project.html
+++ b/templates/submit-project.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Submit Project</h1>
+<h4>Submit Project for {{event.name|title}}</h4>
+<form method="POST">
+{% csrf_token %}
+{{form.as_p}}
+<input type="submit" value="Submit"/>
+</form>
 {% endblock %}
