--- a/templates/account.html
+++ b/templates/account.html
@@ -3,7 +3,17 @@
 {% block content %}
 <h1>My account</h1>
 
+<div>
+<h3>My events</h3>
 {% for event in user.events.all %}
 <a href="{% url 'event' event.id %}">{{event.name}}</a>
 {% endfor %}
+</div>
+
+<div>
+<h3>My submissions</h3>
+{% for sub in user.submissions.all %}
+<a href="{% url 'update-submission' sub.id %}">{{sub.event.name}}</a>
+{% endfor %}
+</div>
 {% endblock %}
