--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,8 +3,8 @@
 
     {% if request.user.is_authenticated %}
     <a href="{% url 'account' %}">account</a>
-    <a href="#">Logout</a>
+    <a href="{% url 'logout' %}">Logout</a>
     {% else %}
-    <a href="#">Login</a>
+    <a href="{% url 'login' %}">Login</a>
     {% endif %}
 </nav>
