--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -8,12 +8,6 @@
 
 <form method="POST" action={% url 'login' %}>
 {% csrf_token %}
-<!--
-<div>
-<label>User:</label>
-<input type="text" name="username"/>
-</div>
--->
 
 <div>
 <label>Email:</label>
@@ -25,19 +19,22 @@
 <input type="password" name="password"/>
 </div>
 
-<!--
-<div>
-<label>Password confirmation:</label>
-<input type="password" name="password2"/>
-</div>
--->
 
 <div>
 <input type="submit" value="login"/>
 </div>
-</form>
+<p> Do not have an account? <a href="{% url 'register' %}">register</a></p>
+</form>   
 {% else %}
 <h1>Register Page</h1>
+<div>
+<form method="POST" action="{% url 'register' %}">
+{% csrf_token %}
+{{form.as_p}}
+<input type="submit" value="register" />
+<p>Already have an account? </p><a href="{% url 'login' %}">Login here</a>
+</form>
+</div>
 {% endif %}
 
 {% endblock %}
