--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Hello guys!</h1>
-
-<section>
+<section class='container--events'>
 <h3>Events</h3>
 
-<div id='event--lists'>
+<div class='event--lists'>
 {% for event in events %}
 <a href="{% url 'event' event.id %}">
-<div>
-{{event.name}}
+<div class='wrapper--event'>
+<strong>{{event.name}}</strong>
+<p>{{event.participation.count}} registered</p>
+<p>{{event.registration_deadline}} registration deadline</p>
 </div>
 </a>
 {% endfor %}
@@ -20,11 +20,11 @@
 <section>
 <h3>Users</h3>
 
-<div id='event--lists'>
+<div class='users--lists'>
 {% for user in users %}
 <a href="{% url 'profile' user.id %}">
-<div>
-{{user.name}}
+<div class="wrapper--user">
+<h4>{{user.name}}</h4>
 </div>
 </a>
 {% endfor %}
