--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,16 @@
 <nav>
+<div>
 <a href="{% url 'home' %}">Home</a>
+{% if request.user.is_authenticated %}
+<a href="{% url 'account' %}">account</a>
+{% endif %}
+</div>
 
+<div>
     {% if request.user.is_authenticated %}
-    <a href="{% url 'account' %}">account</a>
     <a href="{% url 'logout' %}">Logout</a>
     {% else %}
     <a href="{% url 'login' %}">Login</a>
     {% endif %}
+</div>
 </nav>
