--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,10 +30,11 @@
 
 nav{
 	width: 100%;
-	padding: 1em;
+	padding: 0.5em;
 	border-bottom: 1px solid rgb(218, 218, 218);
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 
@@ -62,4 +63,43 @@ nav a{
 	border: 1px solid rgb(218, 218, 218);
 	padding: 1em;
 	border-radiud: 5px;
+}
+
+
+.user--avatar--sm{
+	height: 50px;
+	width: 50px;
+	object-fit: cover;
+	border-radius: 50%;   
+}
+
+
+.btn{
+	padding: 10px 20px;
+	border-radius: 5px;
+	text-decoration: none;
+	background-color: rgb(204, 204, 204);
+	color: black;
+	display: block;
+	width: fit-content;
+	margin: 10px;
+}
+
+
+.btn--warning{
+	background-color: #ffe900;
+	
+}
+
+
+.btn--primary{
+	background-color: steelblue;
+	color: #fff;
+	
+}
+
+
+#event--action--wrapper{
+	display: flex;
+	flex-wrap: wrap;
 }
