--- a/templates/account.html
+++ b/templates/account.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>My account</h1>
 
-<div>
+<div class="section">
+<h1>My account</h1>
+</div>
+
+<div class="section">
 <h3>My events</h3>
 {% for event in user.events.all %}
 <a href="{% url 'event' event.id %}">{{event.name}}</a>
 {% endfor %}
 </div>
 
-<div>
+<div class="section">
 <h3>My submissions</h3>
 {% for sub in user.submissions.all %}
 <a href="{% url 'update-submission' sub.id %}">{{sub.event.name}}</a>
