--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class='container--events'>
+<section class="container--events">
 <h3>Events</h3>
 
-<div class='event--lists'>
+<div class="event--lists">
 {% for event in events %}
 <a href="{% url 'event' event.id %}">
-<div class='wrapper--event'>
+<div class="wrapper--event">
 <strong>{{event.name}}</strong>
 <p>{{event.participation.count}} registered</p>
 <p>{{event.registration_deadline}} registration deadline</p>
@@ -20,7 +20,7 @@
 <section>
 <h3>Users</h3>
 
-<div class='users--lists'>
+<div class="users--lists section">
 {% for user in users %}
 <a href="{% url 'profile' user.id %}">
 <div class="wrapper--user">
