--- a/templates/account.html
+++ b/templates/account.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <div class="section">
+    <img class="user--avatar--lg" src="{{user.avatar.url}}">
 <h1>My account</h1>
     <a class="btn btn--warning" href="{% url 'edit_account' %}">Edit</a>
     <a class="btn btn--warning" href="">Password reset</a>
