--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,9 @@
 <div class="wrapper--user">
 <img class="user--avatar--sm" src="{{user.avatar.url}}"/>
 <h4>{{user.name}}</h4>
+{% if user.bio %}
+<p>{{user.bio|truncatechars:10}}</p>
+{% endif %}
 </div>
 </a>
 {% endfor %}
