--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,12 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<div class='section'>
+<img class='user--avatar--lg' src='{{user.avatar.url}}'>
 <h1>{{user.username}}</h1>
+</div>
+
+<div class='section'>
+<p>{{user.bio}}
+</div>
 {% endblock %}
