--- a/templates/home.html
+++ b/templates/home.html
@@ -33,5 +33,10 @@
 </a>
 {% endfor %}
 </div>
+<div>
+{% for page in paginator.num_pages %}
+<p>test</p>
+{% endfor %}
+</div>
 </section>
 {% endblock %}
