--- a/static/css/main.css
+++ b/static/css/main.css
@@ -122,3 +122,16 @@ nav a{
     object-fit: cover;
     border-radius: 50%;
 }
+
+
+.paginator--wrapper{
+	disply: flex;
+	flex-wrapper: wrap;
+}
+
+
+.login-register--container{
+	max-width: 600px;
+	margin: 0 auto;
+	border: 1px solid rgb(218, 218, 218);
+}
