--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -4,6 +4,8 @@
 
 {% if page == 'login' %}
 
+<div class="login-register--container">
+
 <h1>Login Page</h1>
 
 <form method="POST" action={% url 'login' %}>
@@ -25,7 +27,11 @@
 </div>
 <p> Do not have an account? <a href="{% url 'register' %}">register</a></p>
 </form>   
+</div>
+
 {% else %}
+
+<div class="login-register--container">
 <h1>Register Page</h1>
 <div>
 <form method="POST" action="{% url 'register' %}">
@@ -34,6 +40,7 @@
 <input type="submit" value="register" />
 <p>Already have an account? </p><a href="{% url 'login' %}">Login here</a>
 </form>
+</div>
 </div>
 {% endif %}
 
