--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,24 @@
 }
 
 
+@media (max-width:800px){
+	.event--lists{
+		grid-template-columns: 1fr 1fr;
+	}
+	.users--lists{
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+}
+
+@media (max-width:600px){
+	.event--lists{
+		grid-template-columns: 1fr;
+	}
+	.users--lists{
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
 
 .event--lists{
 	display: grid;
@@ -55,7 +73,7 @@ nav a{
 .wrapper--event{
 	border: 1px solid rgb(218, 218, 218);
 	padding: 1em;
-	border-radiud: 5px;
+	border-radius: 5px;
 }
 
 
